experimental/ir/testdata/extend/proto3.proto.stderr.txt
error: extension range in "proto3"
  --> testdata/extend/proto3.proto:22:16
   |
22 |     extensions 1;
   |                ^
  ::: testdata/extend/proto3.proto:15:10
   |
15 | syntax = "proto3";
   |          -------- "proto3" specified here
   |
   = help: extension numbers cannot be reserved in "proto3"

error: expected built-in options message, found message type `test.M`
  --> testdata/extend/proto3.proto:25:1
   |
25 | extend M {
   | ^^^^^^
  ::: testdata/extend/proto3.proto:15:10
   |
15 | syntax = "proto3";
   |          -------- "proto3" specified here
   |
   = help: extendees in "proto3" files are restricted to an
           `google.protobuf.*Options` message types%!(EXTRA taxa.Noun=message
           extension block)

encountered 2 errors
